
=head1 VERSION

$LastChangedRevision$

=head1 DATE

$LastChangedDate$

=head1 DESCRIPTION

This document lists the Changes to Bricolage introduced with each release.

=head1 VERSION 1.9.2 "Gimme" ()

=head2 Improvements

=over

=item *

Eliminated letter graphices for "Published" and "Deployed" labels in story,
media, and template managers in favor of localizable characters. [David]

=back

=head1 VERSION 1.9.1 "Peeves" (2005-10-28)

=head2 New Features

=over

=item *

Added support for the C<ANY()> function to pass multiple possible values for a
given parameter to the C<list()>, C<list_ids()>, and, where pertinent,
C<href()> methods in the following classes:

=over

=item L<Bric::Dist::Action|Bric::Dist::Action>

=item L<Bric::Dist::ActionType|Bric::Dist::ActionType>

=item L<Bric::Dist::Resource|Bric::Dist::Resource>

=item L<Bric::Dist::Server|Bric::Dist::Server>

=item L<Bric::Dist::ServerType|Bric::Dist::ServerType>

=item L<Bric::Util::Alert|Bric::Util::Alert>

=item L<Bric::Util::Alerted|Bric::Util::Alerted>

=item L<Bric::Util::AlertType|Bric::Util::AlertType>

=item L<Bric::Util::AlertType::Parts::Rule|Bric::Util::AlertType::Parts::Rule>

=item L<Bric::Util::Event|Bric::Util::Event>

=item L<Bric::Util::EventType|Bric::Util::EventType>

=item L<Bric::Util::Job|Bric::Util::Job>

=item L<Bric::Util::MediaType|Bric::Util::MediaType>

=item L<Bric::Util::Pref|Bric::Util::Pref>

=item L<Bric::Util::Priv|Bric::Util::Priv>

=item L<Bric::Util::UserPref|Bric::Util::UserPref>

=back

[David]

=item *

Added C<serialize_to_pod()> and C<update_from_pod()> methods to the container
element class. These support a pseudo-pod syntax that enable a complete
hierarchy of elements to be edited, including links to related stories and
media, in a single stream of text. [David]

=item *

Converted "Bulk Edit" in the UI to use the new POD syntax supported by the
element classes and eliminated the old "Super Bulk Edit" interface since it
became redundant. [David]

=item *
