@@ -485,59 +485,6 @@ sub find_first_template {
 
 #------------------------------------------------------------------------------#
 
-=item $success = $b->display_pages($paginated_element_name)
-
-=item $success = $b->display_pages($paginated_element_name, %ARGS)
-
-=item $success = $b->display_pages(\@paginated_element_names, %ARGS)
-
-A method to be called from template space. Use this method to display
-paginated elements. If this method is used, the burn system will run once for
-every page element listed in C<\@paginated_element_names> (or just
-C<$paginated_element_name>) in the story; this is so that autohandlers will be
-called when appropriate. All arguments after the first argument will be passed
-to the template executed as its C<%ARGS> hash.
-
-B<Throws:> NONE.
-
-B<Side Effects:> NONE.
-
-B<Notes:> NONE.
-
-=cut
-
-sub display_pages {
-    my $self = shift;
-    my $names = shift;
-    $names = [$names] unless ref $names;
-
-    # Get the current element
-    my $elem = $self->_current_element;
-    my $page_place = $self->_get('_page_place') || 0;
-
-    my ($next_page, $page_elem);
-    my $elements = $elem->get_elements;
-    foreach my $place ($page_place..$#$elements) {
-        my $e = $elements->[$place];
-        next unless $e->is_container;
-        foreach my $name (@$names) {
-            next unless $e->has_name($name);
-            $page_elem ? $next_page = 1 : $page_elem = $e;
-            next unless $next_page;
-            last;
-        }
-    }
-
-    # Set the 'more_pages' and '_page_place' properties.
-    $self->_set([ qw(more_pages _page_place) ],
-                [ $next_page,
-                  $page_elem ? $page_elem->get_place + 1 : $page_place + 1 ]);
-
-    $self->display_element($page_elem, @_);
-}
-
-#------------------------------------------------------------------------------#
-
 =item $success = $b->display_element($element)
 
 =item $success = $b->display_element($element, %ARGS)
